.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:26:05 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0403_blink.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0403_blink\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0403_blink.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0403_blink.elf
 
arm-none-eabi-size  0403_blink.elf 
arm-none-eabi-objdump -h -S 0403_blink.elf  > "0403_blink.list"
   text	   data	    bss	    dec	    hex	filename
   7996	     12	   1644	   9652	   25b4	0403_blink.elf
Finished building: default.size.stdout
 
Finished building: 0403_blink.list
 
11:26:34 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-size  0403_blink.elf 
   text	   data	    bss	    dec	    hex	filename
   7996	     12	   1644	   9652	   25b4	0403_blink.elf
Finished building: default.size.stdout
 
11:32:17 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:72:9: error: unknown type name 'unit8_t'; did you mean 'uint8_t'?
   72 |         unit8_t fuck_state = 0;
      |         ^~~~~~~
      |         uint8_t
../Core/Src/main.c:73:9: error: unknown type name 'unit8_t'; did you mean 'uint8_t'?
   73 |         unit8_t mystate = 0;
      |         ^~~~~~~
      |         uint8_t
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
11:32:44 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:73:9: error: unknown type name 'unsi8_t'
   73 |         unsi8_t mystate = 0;
      |         ^~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
11:32:55 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0403_blink.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0403_blink\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0403_blink.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0403_blink.elf
 
arm-none-eabi-size  0403_blink.elf 
arm-none-eabi-objdump -h -S 0403_blink.elf  > "0403_blink.list"
   text	   data	    bss	    dec	    hex	filename
   7916	     12	   1644	   9572	   2564	0403_blink.elf
Finished building: default.size.stdout
 
Finished building: 0403_blink.list
 
11:35:42 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:131:1: error: expected identifier or '(' before '}' token
  131 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
11:36:23 **** Incremental Build of configuration Debug for project 0403_blink ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "0403_blink.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ASUS\Desktop\stm_ws\0403_blink\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0403_blink.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0403_blink.elf
 
arm-none-eabi-size  0403_blink.elf 
arm-none-eabi-objdump -h -S 0403_blink.elf  > "0403_blink.list"
   text	   data	    bss	    dec	    hex	filename
   7872	     12	   1644	   9528	   2538	0403_blink.elf
Finished building: default.size.stdout
 
Finished building: 0403_blink.list
 
